After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 685110 - encodebin fails to release mux request sink pad for GstId3Mux as it is a static one for this mux
encodebin fails to release mux request sink pad for GstId3Mux as it is a stat...
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
git master
Other Linux
: Normal normal
: 1.0.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-09-29 22:40 UTC by Alban Browaeys
Modified: 2012-09-30 14:34 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
check if pad is a request pad before release_request_pad (1.21 KB, patch)
2012-09-29 22:40 UTC, Alban Browaeys
committed Details | Review

Description Alban Browaeys 2012-09-29 22:40:05 UTC
Created attachment 225401 [details] [review]
check if pad is a request pad before release_request_pad

(sound-juicer:11826): GStreamer-CRITICAL **: gst_element_release_request_pad: assertion `GST_PAD_PAD_TEMPLATE (pad) == NULL || GST_PAD_TEMPLATE_PRESENCE (GST_PAD_PAD_TEMPLATE (pad)) == GST_PAD_REQUEST' failed
(gdb) bt
  • #0 g_logv
    at gmessages.c line 967
  • #1 g_log
    at gmessages.c line 1003
  • #2 g_return_if_fail_warning
  • #3 gst_element_release_request_pad
    at gstelement.c line 319
  • #4 stream_group_free
    at gstencodebin.c line 1796
  • #5 stream_group_remove
    at gstencodebin.c line 1904
  • #6 gst_encode_bin_release_pad
    at gstencodebin.c line 761
  • #7 gst_element_release_request_pad
    at gstelement.c line 328
  • #8 rb_gst_check_missing_plugins
    at rb-gst-media-types.c line 329
  • #9 sj_extractor_supports_profile
    at sj-extractor.c line 701
  • #10 profile_changed_cb
    at sj-main.c line 1342
  • #11 startup_cb
    at sj-main.c line 2083
  • #12 g_cclosure_marshal_VOID__VOID
    at gmarshal.c line 85
  • #13 g_closure_invoke
    at gclosure.c line 777
  • #14 signal_emit_unlocked_R
    at gsignal.c line 3551
  • #15 g_signal_emit_valist
    at gsignal.c line 3300
  • #16 g_signal_emit
    at gsignal.c line 3356
  • #17 g_application_register
    at gapplication.c line 1309
  • #18 g_application_real_local_command_line
    at gapplication.c line 461
  • #19 g_application_run
    at gapplication.c line 1557
  • #20 main
    at sj-main.c line 2224

Comment 1 Tim-Philipp Müller 2012-09-30 14:33:59 UTC
Thanks, pushed:

 commit 579458f61373ef60fdc19c5fb46528d085c932cb
 Author: Alban Browaeys <prahal@yahoo.com>
 Date:   Sun Sep 30 00:31:21 2012 +0200

    encodebin: muxer sink pad is not always a request pad
    
    GstId3Mux sink pad is an always (static) pad. Thus releasing it
    as if a request pad triggers:
    (sound-juicer:11826): GStreamer-CRITICAL **:
    gst_element_release_request_pad: assertion `GST_PAD_PAD_TEMPLATE (pad)
    == NULL || GST_PAD_TEMPLATE_PRESENCE (GST_PAD_PAD_TEMPLATE (pad)) ==
    GST_PAD_REQUEST' failed
    
    https://bugzilla.gnome.org/show_bug.cgi?id=685110